fix(style): improve legibility

--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -24,6 +24,7 @@
   &__content {
     margin-top: -.1rem;
     padding: 1.5rem;
+    background: rgba(255,255,255,.4);
     border: .1rem solid $green;
   }
 }
